# frontends

./: .gitignore  CMakeLists.txt  README.md
brdr/: CMakeLists.txt  TrackerBRDR_generator.cc
cfg_frontend/: .#TEquipmentTracker.cc  CMakeLists.txt  TEqTracker.cc  TEqTracker.hh  TEqTracker_ExecuteDtcCommand.cc  TEqTracker_PanelPrintStatus.cc  TEqTracker_PulserOff.cc  TEqTracker_PulserOn.cc  TEqTracker_ResetOutput.cc  TEqTracker_ResetStationLV.cc  TEquipmentTracker.cc  TEquipmentTracker.hh  TEquipmentTracker_ProcessCommand_PanelPrintStatus.cc  TEquipmentTracker_ProcessCommand_PulserOff.cc  TEquipmentTracker_ProcessCommand_PulserOn.cc  TEquipmentTracker_ProcessCommand_ResetOutput.cc  TEquipmentTracker_ProcessCommand_ResetStationLV.cc  cfg_frontend.cc  mu2e_config_fe.py  trk_cfg_frontend.cc  trk_config_fe.py
cfo_frontend/: CMakeLists.txt  TEqEmulatedCfo.cc  TEqEmulatedCfo.hh  TEqExternalCfo.cc  TEqExternalCfo.hh  TEqHardwareCfo.cc  TEqHardwareCfo.hh  TEqHardwareCfo_Commands.cc  TEqHardwareCfo_ProcessCommand.cc  TEquipmentCfo.cc  TEquipmentCfo.hh  TEquipmentCfo_Rpc.cc  cfo_driver.cc  cfo_driver.hh  cfo_driver_types.hh  cfo_em_frontend.cc  cfo_em_frontend.hh  cfo_emu_driver.cc  cfo_emu_frontend.cc  cfo_emu_frontend.hh  cfo_ext_frontend.cc  cfo_ext_frontend.hh  cfo_frontend.cc  cfo_frontend.hh  cfo_gen_driver.cc  cfo_interface.hh  cfo_mon_driver.cc
cfo_frontend/attic/: cfo_emu_driver.cc  cfo_emu_driver.hh  cfo_ext_frontend.HH  cfo_frontend.cc  cfo_gen_driver.cc  cfo_gen_driver.hh  cfo_mon_driver.cc  cfo_mon_driver.hh
conf/: CMakeLists.txt  (+2 more)
dtc_frontend/: CMakeLists.txt  TEquipmentDTC.cc  TEquipmentDTC.hh  TEquipmentNode.cc  TEquipmentNode.hh  TEquipmentNode_Artdaq.cc  dtc_driver.cc  dtc_driver.hh  dtc_driver_types.hh  dtc_frontend.cc  dtc_frontend.hh  dtc_mt_frontend.cc  emucfo_driver.cc  emucfo_driver.hh  node_frontend.cc  nulldev.cc  trk_dtc_ctl_frontend.cc  trk_dtc_driver.cc  trk_dtc_driver.hh  trk_dtc_frontend.cc  trk_dtc_frontend.hh
dtc_frontend/attic/: trk_dtc_frontend.cc
history1/: CMakeLists.txt  feslow.cc  feslow.cxx
node_frontend/: ArtdaqComponent.hh  ArtdaqMetrics.hh  CMakeLists.txt  TEqArtdaq.cc  TEqArtdaq.hh  TEqCrvDtc.cc  TEqCrvDtc.hh  TEqCrvDtc_Commands.cc  TEqCrvDtc_ProcessCommand.cc  TEqDisk.cc  TEqDisk.hh  TEqTrkDtc.cc  TEqTrkDtc.hh  TEqTrkDtc_Commands.cc  TEqTrkDtc_Commands_LoadThresholds.cc  TEqTrkDtc_Commands_Rates.cc  TEqTrkDtc_Commands_Read.cc  TEqTrkDtc_Commands_SetThresholds.cc  TEqTrkDtc_MeasureThresholds.cc  TEqTrkDtc_ProcessCommand.cc  TEquipmentManager.cc  TEquipmentManager.hh  TEquipmentManager_Rpc.cc  TEquipmentNode.cc  TEquipmentNode.hh  TEquipmentNode_Artdaq.cc  TEquipmentNode_Disk.cc  TEquipmentNode_Dtc.cc  TEquipmentNode_Rpc.cc  TEquipmentNode_Rpc_ControlRoc_MeasureThresholds.cc  TEquipmentNode_Rpc_ControlRoc_Rates.cc  TEquipmentNode_Rpc_ControlRoc_Read.cc  TEquipmentNode_Rpc_ControlRoc_ReadDDR.cc  TEquipmentNode_Rpc_ControlRoc_SetThresholds.cc  TEquipmentNode_Rpc_LoadThresholds.cc  TMu2eEqBase.cc  TMu2eEqBase.hh  node_frontend.cc
node_frontend/attic/: TEqTrkDtc_Commands_MeasureThresholds.cc  TEqTrkDtc_Commands_Rates.cc  TEqTrkDtc_Commands_Read.cc  TEqTrkDtc_Commands_SetThresholds.cc  TEqTrkDtc_ConfigureJA.cc  TEqTrkDtc_DigiRW.cc  TEqTrkDtc_DumpSettings.cc  TEqTrkDtc_ReadDDR.cc  TEqTrkDtc_ReadIlp.cc  TEqTrkDtc_ReadRegister.cc  TEqTrkDtc_ReadSpi.cc  TEqTrkDtc_ResetRoc.cc  TEqTrkDtc_SetCalDac.cc  TEqTrkDtc_WriteRegister.cc  TEquipmentNode.cc.save  TEquipmentNode.hh.save  TEquipmentNode_Artdaq.CC  TEquipmentNode_Dtc.cc.save  TEquipmentNode_Dtc.cc.save1  TEquipmentNode_InitCrvDtcVarNames.cc  TEquipmentNode_InitTrkDtcVarNames.cc  TEquipmentNode_ReadCrvDtcMetrics.cc  TEquipmentNode_ReadTrkDtcMetrics.cc  TEquipmentNode_Rpc.cc.save  TEquipmentNode_Rpc_CRV.cc  TEquipmentNode_Rpc_DumpSettings.cc  TEquipmentNode_Rpc_SetCalDac.cc  TEquipmentNode_Rpc_Tracker.cc  TTrkEquipmentNode.cc  TTrkEquipmentNode.hh  TTrkEquipmentNode_Rpc.cc  dtc_driver.cc  dtc_driver.hh  dtc_driver_types.hh  dtc_frontend.cc  node_frontend.cc.save  trk_dtc_ctl_frontend.cc  trk_dtc_ctl_frontend.hh  trk_dtc_driver.hh  trk_dtc_frontend.hh
roc_crv_frontend/: CMakeLists.txt  cd_multi.cxx  cd_multi.h  roc_crv_driver.cc  roc_crv_driver.hh  roc_crv_frontend.cc  roc_crv_frontend.hh
roc_frontend/: CMakeLists.txt  roc_driver.cc  roc_frontend.cc  roc_frontend.hh
tfm/: CMakeLists.txt  client.cc  db_runinfo.cc  db_runinfo.hh  db_runinfo_main.cc  get_next_run_number.cc  getoptx.cc  my_xmlrpc_main.cc  tfm_frontend.cc
tfm/attic/: my_xmlrpc.cc  my_xmlrpc_main.cc
tfm_frontend/: CMakeLists.txt  MessageFacility.fcl  casprintf.h  client.cc  cmdline_parser.cc  configure_detector.py  db_runinfo.cc  db_runinfo.hh  db_runinfo_main.cc  dumpvalue.cc  get_next_run_number.cc  get_next_run_number.sh  getoptx.cc  getoptx.h  mallocvar.h  my_xmlrpc.cc  my_xmlrpc.cc~  my_xmlrpc.hh  my_xmlrpc_main.cc  my_xmlrpc_main.cc~  register_transitions.cc  string_parser.cc  tfm_br_driver.cc  tfm_br_driver.hh  tfm_disk_driver.cc  tfm_disk_driver.hh  tfm_dr_driver.cc  tfm_dr_driver.hh  tfm_driver.CC  tfm_driver.cc  tfm_driver.hh  tfm_fe.py  tfm_fe_launch.cc  tfm_fe_launch.hh  tfm_frontend.cc  tfm_frontend.cc~  tfm_frontend.hh  tfm_launch_fe.cc  tfm_launch_fe.hh  tfm_launch_fe.py  (+3 more)
tfm_frontend/attic/: CMakeLists.txt  cmdline_parser.h  dumpvalue.cc  m_client.py  m_frontend.py  stripcaseeq.cc  tfm_br_driver.hh  tfm_dr_driver.cc  tfm_launch_fe.cc  tfm_mon_fe.hh
trk_dcs/: CMakeLists.txt  trk_dcs_equipment.hh  trk_dcs_frontend.cc  trk_spi_data.hh  trk_utils.cc  trk_utils.hh
utils/: CMakeLists.txt  MidasInterface.cc  MidasInterface.hh  OdbInterface.cc  OdbInterface.hh  TEquipmentManager.cc  TEquipmentManager.hh  TEquipmentManager_Rpc.cc  TMu2eEqBase.cc  TMu2eEqBase.hh  classes.h  classes_def.xml  db_runinfo.cc  db_runinfo.hh  db_runinfo_main.cc  get_host_name.cc  get_next_run_number.cc  get_next_run_number.sh  get_xmlrpc_url.cc  mu2e_sc.cc  mu2e_sc.hh  mu2e_sc_new.cc  mu2e_sc_new.hh  my_mfe.cxx  register_transitions.cc  runinfodb.py  short_hostname.cc  test_runinfodb.py  test_runinfodb_001.py  utils.cc  utils.hh
(+277 files in other folders)
